[package]
name = "circuit"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/Bitbot25/circuit"
description = "A interpreter and compiler for the Circuit language."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unicode-xid = "0.2.3"

